--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ body {
   background-color: rgb(212, 30, 30);
 }
 
-
 /* catalogo */
 
 .catalogo {
@@ -95,11 +94,16 @@ body {
   color: rgb(172, 39, 22);
 }
 
-
 /* carrusel */
 
 .carrusel-img {
   width: 100%;
+}
+
+/* toastify */
+
+.toasty {
+  font-size: 1rem;
 }
 
 
